<resources>
    <string name="app_name">TrailChum</string>

    <string name="createAccountMainMenu">Create account</string>
    <string name="signInMainMenu">Sign in</string>
    <string name="tempMap">Temp map</string>
    <string name="title_activity_maps">Map</string>

    <string name="accountDetailsCreateAccount">Account details</string>
    <string name="mapType"> Types</string>
    <string name="personalDetailsCreateAccount">Personal Details</string>

    <string name="genderCreateAccount">Gender: </string>
    <string name="dateOfBirthPickerCreateAccount">Date of birth</string>

    <string name="createAccountBtnCreateAccount">Create Account</string>

    <string name="completeHikesUserProfile">Completed hikes</string>
    <string name="upcomingHikesUserProfile">Upcoming hikes</string>
    <string name="hikeTrailGoalsUserProfiles">Hike trail goals</string>

    <string name="firstLastNameUserProfile">First and last name</string>

    <string name="trailLength">Trail Length: </string>
    <string name="rating">Rating: </string>
    <string name="surface">Surface: </string>
    <string name="stairs">Stairs: </string>
    <string name="trailWidth">Trail Width: </string>
    <string name="trailClass">Trail Class: </string>

    <string name="addTrailToWishlist">Add Trail to Trails List</string>
    <string name="viewTrailOnMap">View Trail On Map</string>
    <string name="search">Search</string>
    <string name="zoomIn">Zoom In</string>
    <string name="zoomOut">Zoom Out</string>
    <string name="custom">Custom</string>
    <string name="current_location">Current Location</string>

    <string name="facebook_application_id" translatable="false">481644469103319</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb481644469103319</string>
    <string name="inbox">Inbox</string>
    <string name="drafts">Drafts</string>
    <string name="sent_items">Sent Items</string>
    <string name="trash">Trash</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="user_name">spot@catchat.com</string>
    <!-- menu items -->
    <string name="nav_profile">Profile</string>
    <string name="nav_matches">Matches</string>
    <string name="nav_trails">Trails</string>
    <string name="nav_signout">Sign Out</string>
    <string name="nav_open_drawer">Open Navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_placeholder">Write a message</string>

    <string name="sendMsg">Send Message</string>
    <string name="delete">Delete</string>
    <string name="itsAMatch">Its a match! Let them know when you are free!</string>

</resources>
