<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_mainpage"
            android:icon="@drawable/profile"
            android:title="@string/nav_profile"
            android:checked="true" />
        <item
            android:id="@+id/nav_matching"
            android:icon="@drawable/id"
            android:title="@string/nav_matches" />
        <item
            android:id="@+id/nav_trails"
            android:icon="@drawable/trail"
            android:title="@string/nav_trails" />
<!--        <item-->
<!--            android:id="@+id/nav_signout"-->
<!--            android:icon="@android:drawable/ic_menu_delete"-->
<!--            android:title="@string/nav_signout" />-->
    </group>

</menu>
