<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTrailName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:textSize="8pt"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/tvTrailClassTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trailClass" />

        <TextView
            android:id="@+id/tvTrailClassValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/tvSurfaceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surface" />

        <TextView
            android:id="@+id/tvSurfaceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/tvLengthTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trailLength" />

        <TextView
            android:id="@+id/tvLengthValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/tvTrailWidthTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trailWidth" />

        <TextView
            android:id="@+id/tvTrailWidthValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/tvStairsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stairs" />

        <TextView
            android:id="@+id/tvStairsValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/tvRatingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating" />

        <TextView
            android:id="@+id/tvRatingValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reviews"
        android:layout_margin="10dp"
        android:background="#FFC117" />

    <Button
        android:id="@+id/btnAddTrailToList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addTrailToWishlist"
        android:layout_margin="10dp"
        android:background="#D251A0E4" />

    <Button
        android:id="@+id/btnViewOnMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/viewTrailOnMap"
        android:layout_margin="10dp"
        android:background="#D2FF4FC0" />

</LinearLayout>